Actualización implementación login seguro

--- a/tasks/templates/signup.html
+++ b/tasks/templates/signup.html
@@ -50,6 +50,9 @@
             </div>
             <button type="submit" class="btn btn-primary w-100">Registrarme</button>
         </form>
+        <div class="text-center mt-3">
+            <a href="{% url 'login' %}" class="btn btn-primary w-100">Iniciar Sesión</a>
+        </div>
     </div>
 </body>
 
