--- a/tasks/templates/login.html
+++ b/tasks/templates/login.html
@@ -4,16 +4,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro</title>
+    <title>Iniciar Sesión</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     {% load static %}
     <link rel="stylesheet" href="{% static 'signup.css' %}">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <script src="https://www.google.com/recaptcha/enterprise.js" async defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
 <body>
     <div class="form-container">
-        <h2 class="text-center">Iniciar Sesión </h2>
+        <h2 class="text-center">Iniciar Sesión</h2>
+        {% if messages %}
+        <div class="alert alert-success" role="alert">
+            {{ messages }}
+            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+        </div>
+        {% endif %}
         <form method="POST" action="{% url 'login' %}">
             {% csrf_token %}
             <div class="mb-3">
@@ -29,7 +37,7 @@
                 <input type="password" class="form-control" id="password1" name="password1"
                     placeholder="Ingresa tu contraseña" required>
                 <div class="text-danger">
-                    {{ errors.password1 }}
+                    {{ errors.login }}
                 </div>
             </div>
             <div class="mb-3">
@@ -42,6 +50,9 @@
             </div>
             <button type="submit" class="btn btn-primary w-100">Iniciar Sesión</button>
         </form>
+        <div class="text-center mt-3">
+            <a href="{% url 'register' %}" class="btn btn-primary w-100">Registrarme</a>
+        </div>
     </div>
 </body>
 
